# probinet

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  api.html  contributing.html  genindex.html  index.html  main.py  main_CRep.py  main_JointCRep.py  objects.inv  py-modindex.html  pyproject.toml  references.html  release-notes.md  search.html  searchindex.js  start.html
.doctrees/: api.doctree  contributing.doctree  environment.pickle  index.doctree  references.doctree  start.doctree
.doctrees/tutorials/: ACD.doctree  CRep.doctree  DynCRep.doctree  JointCRep.doctree  MTCOV.doctree  Unknown_structure.doctree
.github/workflows/: documentation.yml  documentation.yml   draft-pdf.yml  test.yml
JointCRep_output/: setting_JointCRep.yaml  theta_test.npz
_modules/: index.html
_modules/probinet/: main.html
_modules/probinet/evaluation/: community_detection.html  covariate_prediction.html  expectation_computation.html  likelihood.html  link_prediction.html
_modules/probinet/input/: loader.html  preprocessing.html  stats.html
_modules/probinet/model_selection/: acd_cross_validation.html  crep_cross_validation.html  cross_validation.html  dyncrep_cross_validation.html  jointcrep_cross_validation.html  main.html  masking.html  mtcov_cross_validation.html  parameter_search.html
_modules/probinet/models/: acd.html  base.html  crep.html  dyncrep.html  jointcrep.html  mtcov.html
_modules/probinet/synthetic/: anomaly.html  base.html  dynamic.html  multilayer.html  reciprocity.html
_modules/probinet/utils/: matrix_operations.html  tools.html
_modules/probinet/visualization/: plot.html
_sources/: api.rst  contributing.rst  index.rst  start.rst
_sources/tutorials/: ACD.ipynb  CRep.ipynb  JointCRep.ipynb  MTCOV.ipynb  Unknown_structure.ipynb
doc/source/: api.rst  conf.py  index.rst
doc/source/tutorials/: ACD.ipynb  CRep.ipynb  CRep.md  DynCRep.ipynb  JointCRep.ipynb  JointCRep.md  Joint_CRep.ipynb  MTCOV.ipynb  MTCov.ipynb  MTCov.md  network_with_anomalies.csv
docs/source/: api.rst  conf.py  contributing.rst  index.rst  references.bib  references.rst
docs/source/tutorials/: ACD.ipynb  CRep.ipynb  DynCRep.ipynb  JointCRep.ipynb  MTCOV.ipynb  Unknown_structure.ipynb  create_syn_ACD.ipynb  generate_synthetic.ipynb
outputs/: theta_CRep.npz
pgm/: main.py  main_CRep.py  main_JointCRep.py  main_MTCOV.py  main_MTCov.py  main_dyncrep.py  test.py  version.py
pgm/JointCRep/: synthetic.py  tools.py
pgm/MTCov_output/: setting_MTCov.yaml
pgm/data/input/: email-Eu-core.csv
pgm/data/model/: setting_CRep.yaml  setting_CRep0.yaml  setting_CRepnc.yaml  setting_Crep_static.yaml  setting_DynCRep.yaml  setting_JointCRep.yaml  setting_MTCOV.yaml  setting_MTCov.yaml  setting_syn_data.yaml  setting_syn_data_CRep.yaml
pgm/input/: __init__.py  generate_network.py  global_timing.py  loader.py  preprocessing.py  statistics.py  stats.py  tools.py
pgm/model/: CRep.py  __init__.py  acd.py  base.py  classes.py  constants.py  crep.py  cv.py  cv_crep.py  dyncrep.py  dyncrep_static.py  jointcrep.py  mtcov.py
pgm/model_selection/: acd_cross_validation.py  crep_cross_validation.py  cross_validation.py  dyncrep_cross_validation.py  jointcrep_cross_validation.py  labeling.py  main.py  masking.py  metrics.py  mtcov_cross_validation.py  parameter_search.py
pgm/model_selection/outputs/: adj_cv_cv.csv  email-Eu-core_cv.csv  synthetic_data_cv.csv
pgm/output/: __init__.py  evaluate.py  likelihood.py  plot.py
pgm/synthetic/: __init__.py  syn_acd.py  syn_dyncrep.py  syn_rep.py  syn_sbm.py
probinet/: main.py  types.py  version.py
probinet/data/input/: setting111.yaml  (+1 more)
probinet/evaluation/: __init__.py  community_detection.py  covariate_prediction.py  expectation_computation.py  likelihood.py  link_prediction.py
probinet/input/: loader.py  preprocessing.py  stats.py
probinet/model_selection/: __init__.py  acd_cross_validation.py  crep_cross_validation.py  cross_validation.py  dyncrep_cross_validation.py  jointcrep_cross_validation.py  labeling.py  main.py  masking.py  mtcov_cross_validation.py  parameter_search.py
probinet/models/: __init__.py  acd.py  base.py  classes.py  constants.py  crep.py  dyncrep.py  jointcrep.py  mtcov.py
probinet/synthetic/: __init__.py  anomaly.py  base.py  dynamic.py  multilayer.py  reciprocity.py
probinet/utils/: __init__.py  decorators.py  matrix_operations.py  tools.py
probinet/visualization/: __init__.py  plot.py
publication/: count_words.py  paper.bib  paper.jats  paper.md
publication/jats/: paper.jats
publication/paper/: paper.bib  paper.md
src/pgm/input/: loader.py  (+5 more)
tests/: .coverage  constants.py  fixtures.py  test.py  test_CRep.py  test_CRep_main.py  test_CRep_notebook.py  test_JointCRep_main.py  test_JointCRep_notebook.py  test_MTCOV.py  test_MTCOV_main.py  test_MTCov_main.py  test_ModelClass.py  test_cv.py  test_evaluate.py  test_generate_network.py  test_input.py  test_link_prediction.py  test_loader.py  test_logger.py  test_main.py  test_model_selection.py  test_notebooks.py  test_plot.py  test_preprocessing.py  test_single_main.py  test_synthetic.py  test_tools.py  test_validation.py  test_validation_ACD.py  test_validation_CRep.py  test_validation_DynCRep.py  test_validation_JointCRep.py  test_validation_MTCOV.py  test_validation_MTCov.py
tests/inputs/: setting_CRep.yaml  setting_CRep_for_initialization.yaml  setting_DynCRep.yaml  setting_JointCRep.yaml  setting_JointCRep_for_initialization.yaml  setting_MTCOV.yaml  setting_MTCOV_for_initialization.yaml  setting_MTCov_for_initialization.yaml
tests/output_folder/: setting_CRep.yaml
tests/outputs/: setting_CRep.yaml  setting_JointCRep.yaml  setting_MTCOV.yaml  setting_MTCov.yaml  theta_GT_CRep.npz  theta_GT_CRep_for_initialization.npz  theta_GT_JointCRep.npz  theta_GT_JointCRep_for_initialization.npz  theta_GT_JointCRep_rseed_1.npz  theta_GT_MTCOV.npz  theta_GT_MTCOV_for_initialization.npz
tutorials/: ACD.html  CRep.html  CRep.ipynb  DynCRep.html  JointCRep.html  MTCOV.html  Unknown_structure.html
tutorials/CRep0_output/: setting_CRep0.yaml  theta_CRep0.npz
(+51 files in other folders)
